[package]
name = "t-display-s3-amoled"
version = "0.1.0"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bh1xuw/t-display-s3-amoled"
documentation = "https://docs.rs/t-display-s3-amoled"
homepage = "https://github.com/bh1xuw/t-display-s3-amoled"
categories = ["hardware-support", "no-std", "embedded"]
description = "BSP for T-Display S3 AMOLED, ESP32-S3 board with RM67162 AMOLED display"
keywords = ["rm67162", "amoled"]
readme = "README.md"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", default-features = false, features = [
    "esp32s3",
] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", features = [
    "esp32s3",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
embedded-graphics = { version = "0.8.0" }
tinygif = "0.0.3"
esp32s3 = { version = "0.28.0", features = ["critical-section", "rt"] }
embedded-hal = "1.0.0"

[features]
default = []
